Bug 70821 - [Q965/PNV/GM45/ILK Bisected]Rendercheck blend fails
Summary: [Q965/PNV/GM45/ILK Bisected]Rendercheck blend fails
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high major
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-24 03:25 UTC by lu hua
Modified: 2013-10-28 02:31 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2013-10-24 03:25:18 UTC
System Environment:
--------------------------
Platform:        Q965/PNV/GM45/ILK
Libdrm:		(master)2.4.47
Mesa:		(master)63974c0f5b26e369a790505af6820d4bbcf451b2
Xserver:	(master)xorg-server-1.14.99.3-1-g7ecfab47eb221dbb996ea6c033348b8eceaeb893
Xf86_video_intel:(master)2.99.904-65-g11e8b299e11ff846e1c8090f7cbd34b2af850d85
Cairo:		(master)98fef3cef2d0f7f463a2e4f9f1b35b09f7b6ea77
Libva:		(staging)1a011ce5bb0b80506797a25a988854f3f81ce909
Libva_intel_driver:(staging)1cee858036a87837deddc87586701ed869f96261
Kernel:	(drm-intel-nightly) 164a4cb4c1431a0689f85507868356fae24da638

Bug detailed description:
-----------------------------
It fails on Q965,Pineview,GM45 and Ironlake. 
repeat also fails with same bisect commit.

Bisect shows:bccbbf8a68faf7aac274efd289d4916083b1a1e3 is the first bad commit.
commit bccbbf8a68faf7aac274efd289d4916083b1a1e3
Author:     Chris Wilson <chris@chris-wilson.co.uk>
AuthorDate: Tue Oct 22 14:22:14 2013 +0100
Commit:     Chris Wilson <chris@chris-wilson.co.uk>
CommitDate: Tue Oct 22 17:57:58 2013 +0100

    sna: Remove the move-to-gpu shortcircuiting for partial GPU, no CPU damage

    Otherwise we may not correctly undo COW or pending move-to-gpu updates.

    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


output:
rendercheck 1.4
Render extension version 0.11
Window format: r8g8b8
Found server-supported format: a8
Found server-supported format: a8r8g8b8
Found server-supported format: x8r8g8b8
Found server-supported format: b8g8r8a8
Found server-supported format: b8g8r8x8
Found server-supported format: r8g8b8
Found server-supported format: b8g8r8
Found server-supported format: r5g5b5
Found server-supported format: b5g5r5
Found server-supported format: x1r5g5b5
Found server-supported format: x1b5g5r5
Found server-supported format: r5g6b5
Found server-supported format: b5g6r5
Found server-supported format: x8b8g8r8
Found server-supported format: x2r10g10b10
Found server-supported format: x2b10g10r10
Beginning blend test on a8
Xor blend test error of 127.0000 at (0, 0) --
           R     G     B     A
got:       0.000 0.000 0.000 0.000
expected:  0.000 0.000 0.000 0.498
src color: 0.00 0.00 0.00 1.00 (a8)
dst color: 0.00 0.00 0.00 0.50
src: 1x1R a8, dst: a8
Beginning blend test on a8r8g8b8
OverReverse blend test error of 255.0000 at (0, 0) --
           R     G     B     A
got:       0.000 0.000 0.000 1.000
expected:  1.000 1.000 1.000 1.000
src color: 1.00 1.00 1.00 1.00 (a8r8g8b8)
dst color: 1.00 1.00 1.00 1.00
src: 1x1R a8r8g8b8, dst: a8r8g8b8
Beginning blend test on x8r8g8b8
OverReverse blend test error of 255.0000 at (0, 0) --
           R     G     B     A
got:       0.000 0.000 0.000 1.000
expected:  1.000 1.000 1.000 1.000
src color: 1.00 1.00 1.00 1.00 (a8r8g8b8)
dst color: 1.00 1.00 1.00 1.00
src: 1x1R a8r8g8b8, dst: x8r8g8b8
Beginning blend test on b8g8r8a8
Beginning blend test on b8g8r8x8
Beginning blend test on r8g8b8
OverReverse blend test error of 255.0000 at (0, 0) --
           R     G     B     A
got:       0.000 0.000 0.000 1.000
expected:  1.000 1.000 1.000 1.000
src color: 1.00 1.00 1.00 1.00 (a8r8g8b8)
dst color: 1.00 1.00 1.00 1.00
src: 1x1R a8r8g8b8, dst: r8g8b8
Beginning blend test on b8g8r8
OverReverse blend test error of 255.0000 at (0, 0) --
           R     G     B     A
got:       0.000 0.000 0.000 1.000
expected:  1.000 1.000 1.000 1.000
src color: 1.00 1.00 1.00 1.00 (a8r8g8b8)
dst color: 1.00 1.00 1.00 1.00
src: 1x1R a8r8g8b8, dst: b8g8r8
Beginning blend test on r5g5b5
OverReverse blend test error of 31.0000 at (0, 0) --
           R     G     B     A
got:       0.000 0.000 0.000 1.000
expected:  1.000 1.000 1.000 1.000
src color: 1.00 1.00 1.00 1.00 (a8r8g8b8)
dst color: 1.00 1.00 1.00 1.00
src: 1x1R a8r8g8b8, dst: r5g5b5
Beginning blend test on b5g5r5
Beginning blend test on x1r5g5b5
OverReverse blend test error of 31.0000 at (0, 0) --
           R     G     B     A
got:       0.000 0.000 0.000 1.000
expected:  1.000 1.000 1.000 1.000
src color: 1.00 1.00 1.00 1.00 (a8r8g8b8)
dst color: 1.00 1.00 1.00 1.00
src: 1x1R a8r8g8b8, dst: x1r5g5b5
Beginning blend test on x1b5g5r5
Beginning blend test on r5g6b5
OverReverse blend test error of 63.0000 at (0, 0) --
           R     G     B     A
got:       0.000 0.000 0.000 1.000
expected:  1.000 1.000 1.000 1.000
src color: 1.00 1.00 1.00 1.00 (a8r8g8b8)
dst color: 1.00 1.00 1.00 1.00
src: 1x1R a8r8g8b8, dst: r5g6b5
Beginning blend test on b5g6r5
Beginning blend test on x8b8g8r8
OverReverse blend test error of 255.0000 at (0, 0) --
           R     G     B     A
got:       0.000 0.000 0.000 1.000
expected:  1.000 1.000 1.000 1.000
src color: 1.00 1.00 1.00 1.00 (a8r8g8b8)
dst color: 1.00 1.00 1.00 1.00
src: 1x1R a8r8g8b8, dst: x8b8g8r8
Beginning blend test on x2r10g10b10
Beginning blend test on x2b10g10r10
Beginning blend test on r8g8b8 window
OverReverse blend test error of 255.0000 at (0, 0) --
           R     G     B     A
got:       0.000 0.000 0.000 1.000
expected:  1.000 1.000 1.000 1.000
src color: 1.00 1.00 1.00 1.00 (a8r8g8b8)
dst color: 1.00 1.00 1.00 1.00
src: 1x1R a8r8g8b8, dst: r8g8b8 window
7 tests passed of 17 total
Successful Groups:


Reproduce steps:
----------------------------
1. xinit&
2. ./rendercheck -o src,over,overreverse,xor -t blend
Comment 1 Chris Wilson 2013-10-24 06:35:39 UTC
commit e685e100705c1a5f4ef84b2bc355aa6b6ed0ab18
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Oct 24 07:28:18 2013 +0100

    Revert "sna: Remove the move-to-gpu shortcircuiting for partial GPU, no CPU damage"
    
    This reverts commit bccbbf8a68faf7aac274efd289d4916083b1a1e3.

commit 638d4f60285709b6efc04cef72d4b530460e3239
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Oct 22 14:22:14 2013 +0100

    sna: Remove the move-to-gpu shortcircuiting for partial GPU, no CPU damage
    
    Otherwise we may not correctly undo COW or pending move-to-gpu updates.
    
    v2: goto move_to_gpu instead for correcting the damage handling.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=70821
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 2 lu hua 2013-10-28 02:31:59 UTC
Verified.Fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.